kubernetes/nextjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-app
  namespace: default
  labels:
    app: nextjs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs-app
  template:
    metadata:
      labels:
        app: nextjs-app
    spec:
      containers:
      - name: nextjs-app
        image: registry.local.example.com/probarra-nextjs-app:local
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "2Gi"
            cpu: "500m"
          requests:
            memory: "1Gi"
            cpu: "250m"
