kubernetes/nextjs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: default
spec:
  selector:
    app: nextjs-app
  ports:
  - name: http
    targetPort: 3000
    port: 80
