kubernetes/nextjs/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextjs
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`example.com`)
      kind: Rule
      services:
        - name: nextjs-service
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: # your secret name
